--- a/MoodMatcher/app/src/main/res/values/colors.xml
+++ b/MoodMatcher/app/src/main/res/values/colors.xml
@@ -7,9 +7,9 @@
     <color name="button_color">#1565C0</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="buttonColor">#FF5733</color>
-    <color name="backgroundMood">#FFFFFF</color>
-    <color name="textColorPrimary">#000000</color>
+    <color name="buttonColor">#FF5733</color> <!-- Example color for button -->
+    <color name="backgroundMood">#FFFFFF</color> <!-- Example color for background -->
+    <color name="textColorPrimary">#000000</color> <!-- Example color for text -->
 
-    <color name="textColorSecondary">#757575</color>
+    <color name="textColorSecondary">#757575</color> <!-- Secondary text color (gray) -->
 </resources>
