--- a/MoodMatcher/app/src/main/res/values/styles.xml
+++ b/MoodMatcher/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-
+    <!-- Default App Theme -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -9,7 +9,7 @@
         <item name="android:textColorSecondary">@color/textColorSecondary</item>
     </style>
 
-
+    <!-- Splash Screen Theme -->
     <style name="Theme_MoodMatcher_Splash" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@color/background_color</item> <!-- Background color for splash -->
         <item name="android:textColorPrimary">@color/textColorPrimary</item> <!-- Text color if used in splash -->
@@ -17,7 +17,7 @@
         <item name="android:windowFullscreen">true</item> <!-- Makes splash screen fullscreen -->
     </style>
 
-
+    <!-- Other Styles -->
     <style name="CustomTextStyle">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/textColorPrimary</item>
